--- a/chara/chika/index.html
+++ b/chara/chika/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="../../css/styles-min.css" />
+		<link rel="stylesheet" href="../../css/styles.css" />
 		<title>Sore Wa Suteki Na Showtime - Itou Chika Character Song</title>
 	</head>
 	<body>
@@ -11,43 +11,53 @@
 			<nav>
 				<ul>
 					<li>
-						<h3><a href="/">Mashimaro TV</a></h3>
+						<h3><a href="/" class="nav-link">Mashimaro TV</a></h3>
 					</li>
-					<li><a href="https://github.com/narayanagung/mashimaro-tv" target="_blank">github↗</a></li>
+					<li><a href="https://github.com/narayanagung/mashimaro-tv" target="_blank" class="nav-link">Github↗</a></li>
 				</ul>
 			</nav>
-			<div class="home-container">
-				<h1>Sore Wa Suteki Na Showtime</h1>
-				<h4>「ソレ」は素敵なショウタイム</h4>
-				<button type="button" id="toggleAutoScroll">🔓 Lyrics Auto Scroll OFF</button>
-			</div>
-			<div id="overflow" style="background-color: #d51515">
-				<div class="lyrics" id="lyrics">
-					<p timestamp="0.1">Itou Chika Character Song</p>
-					<p timestamp="4">Ichigo Mashimaro Chara-CD</p>
-					<p timestamp="8">Based on Barasui Manga Series</p>
-					<p timestamp="11">Provided by Geneon Inc</p>
-					<p timestamp="15">Sore Wa Suteki Na Showtime</p>
-					<p timestamp="18.5">Sung by Saeko Chiba</p>
-					<p timestamp="22">♫ ♫ ♫</p>
-					<p timestamp="28">Yake ni heiwa na asa puchi kodokuna shicue-shon</p>
-					<p timestamp="35">Juwaki wo niramitsutsu ridaiyaru no botan oshita</p>
-					<p timestamp="42.5">Sakki kara hanashichuu bakka ichijikan</p>
-					<p timestamp="49.5">Nantoka shite yo nee kamisama</p>
-					<p timestamp="54.5">Ripi-to suru zetsubou ripi-to shiro kibou</p>
-					<p timestamp="61.5">- - -</p>
-					<p timestamp="61.5">Koe ga kikitai konna ni kikitai</p>
-					<p timestamp="69">Dekiru nara saizenretsu no domannaka ga ii</p>
-					<p timestamp="75">(Muri da yo ne-)</p>
-					<p timestamp="75.5">Kitto tsunagaru anata ni tsunagaru</p>
-					<p timestamp="83">"Chiketto wa gogo ichiji kara yoyaku kaishi desu"</p>
-					<p timestamp="90">(Are- chotto hayakatta ka)</p>
-					<p timestamp="93">♫ ♫ ♫</p>
-					<pre>Lyrics provided by <a href="https://www.animelyrics.com/">animelyrics↗</a></pre>
+			<div class="hero">
+				<div>
+					<h1>Sore Wa Suteki Na Showtime</h1>
+					<h3><small>Saeko Chiba</small></h3>
+				</div>
+				<div>
+					<img src="cover.jpg" alt="Cover Art" />
 				</div>
 			</div>
-			<div class="wrap">
-				<audio id="audio" class="wrap" src="audio.mp3" controls>Your browser does not support the audio element.</audio>
+			<div class="lyrics-container" style="background-color: #d51515">
+				<div class="button-container">
+					<button title="Enter/exit full screen mode" type="button" id="toggleFullscreenButton">&#x1F5D6;</button>
+					<button title="Auto scroll the lyrics when played" type="button" class="scroll-button" id="toggleAutoScroll">🔓 Auto Scroll OFF</button>
+				</div>
+				<div id="overflow">
+					<div class="lyrics" id="lyrics">
+						<p timestamp="0.1">Itou Chika Character Song</p>
+						<p timestamp="4">Ichigo Mashimaro Chara-CD</p>
+						<p timestamp="8">Based on Barasui Manga Series</p>
+						<p timestamp="11">Provided by Geneon Inc</p>
+						<p timestamp="15">Sore Wa Suteki Na Showtime</p>
+						<p timestamp="18.5">Sung by Saeko Chiba</p>
+						<p timestamp="22">♫ ♫ ♫</p>
+						<p timestamp="28">Yake ni heiwa na asa puchi kodokuna shicue-shon</p>
+						<p timestamp="35">Juwaki wo niramitsutsu ridaiyaru no botan oshita</p>
+						<p timestamp="42.5">Sakki kara hanashichuu bakka ichijikan</p>
+						<p timestamp="49.5">Nantoka shite yo nee kamisama</p>
+						<p timestamp="54.5">Ripi-to suru zetsubou ripi-to shiro kibou</p>
+						<p timestamp="61.5">- - -</p>
+						<p timestamp="61.5">Koe ga kikitai konna ni kikitai</p>
+						<p timestamp="69">Dekiru nara saizenretsu no domannaka ga ii</p>
+						<p timestamp="75">(Muri da yo ne-)</p>
+						<p timestamp="75.5">Kitto tsunagaru anata ni tsunagaru</p>
+						<p timestamp="83">"Chiketto wa gogo ichiji kara yoyaku kaishi desu"</p>
+						<p timestamp="90">(Are- chotto hayakatta ka)</p>
+						<p timestamp="93">♫ ♫ ♫</p>
+						<pre>Lyrics provided by <a href="https://www.animelyrics.com/" target="_blank" class="nav-link">animelyrics↗</a></pre>
+					</div>
+				</div>
+				<div class="wrap">
+					<audio id="audio" class="wrap" src="audio.mp3" controls>Your browser does not support the audio element.</audio>
+				</div>
 			</div>
 			<div class="media">
 				<div class="row">
@@ -101,6 +111,6 @@
 				<small>DISCLAIMER : "Mashimaro TV" did not provide the full song. If you interested please support the original creator!</small>
 			</div>
 		</div>
-		<script src="../../js/main-min.js"></script>
+		<script src="../../js/main.js"></script>
 	</body>
 </html>
