--- a/chara/miu/index.html
+++ b/chara/miu/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="../../css/styles-min.css" />
+		<link rel="stylesheet" href="../../css/styles.css" />
 		<title>Osanpo Kyousoukyoku - Matsuoka Miu Character Song</title>
 	</head>
 	<body>
@@ -11,58 +11,68 @@
 			<nav>
 				<ul>
 					<li>
-						<h3><a href="/">Mashimaro TV</a></h3>
+						<h3><a href="/" class="nav-link">Mashimaro TV</a></h3>
 					</li>
-					<li><a href="https://github.com/narayanagung/mashimaro-tv" target="_blank">github↗</a></li>
+					<li><a href="https://github.com/narayanagung/mashimaro-tv" target="_blank" class="nav-link">Github↗</a></li>
 				</ul>
 			</nav>
-			<div class="home-container">
-				<h1>Osanpo Kyousoukyoku</h1>
-				<h4>おさんぽ協奏曲</h4>
-				<button type="button" id="toggleAutoScroll">🔓 Lyrics Auto Scroll OFF</button>
-			</div>
-			<div id="overflow" style="background-color: #9b15d5">
-				<div class="lyrics" id="lyrics">
-					<p timestamp="0.1">Mina ohayo su, kyara-CD notori wo kazaru no wa mina no aidoru ittsumo kawaii matsuoka miu-chan da</p>
-					<p timestamp="9.5">Matteta no kai mattetan da ne iiko da, yappa otori tte koto wa ichiban ninkitte koto</p>
-					<p timestamp="17">Mieru na, e nani mou honban</p>
-					<p timestamp="20">- - -</p>
-					<p timestamp="20">Matsuoka Miu Character Song</p>
-					<p timestamp="20.5">Ichigo Mashimaro Chara-CD</p>
-					<p timestamp="21">Based on Barasui Manga Series</p>
-					<p timestamp="22.8">Provided by Geneon Inc</p>
-					<p timestamp="24">Osanpo Kyousoukyoku</p>
-					<p timestamp="25.5">Sung by Fumiko Orikasa</p>
-					<p timestamp="25.5">- - -</p>
-					<p timestamp="27">Direkuta okya no baiorin mousukoshi agete, a tte nai okashii</p>
-					<p timestamp="33">Maa ikka yoshi [OK] sorede wa ko koroshiki tamae</p>
-					<p timestamp="37.5">♫ [YEAH] ♫</p>
-					<p timestamp="38.5">Hachi ji kishou de ohisama pikari kyou wa doko doko doko gou ka</p>
-					<p timestamp="43.5">Natsu no wan pide otome kouka tsuinteru yure tsuinteru yokan</p>
-					<p timestamp="49.5">Teku teku teku teku kado magatteku</p>
-					<p timestamp="52">Michi no mannaka ni dekkai mizu tamari utsusu</p>
-					<p timestamp="55">Naisu, nante kawaii no</p>
-					<p timestamp="57">Shibashi utsusu mitorete sugo su</p>
-					<p timestamp="60.5">- - -</p>
-					<p timestamp="60.5">Teku teku teku teku teku (teku teku teku)</p>
-					<p timestamp="66">Fuu fura fura fura fura (fura fura fura)</p>
-					<p timestamp="70.5">- - -</p>
-					<p timestamp="70.5">Choi haya aruki ohisama nikori</p>
-					<p timestamp="73.5">Kinjo no obasan attara pekori</p>
-					<p timestamp="76">Konna yoiko de pafekuto na watashi nanda kara</p>
-					<p timestamp="78.5">Negai wa soudawa sekai heiwa</p>
-					<p timestamp="81.5">(Watashi to deto tte-)</p>
-					<p timestamp="82.5">Ranrara urara ohayou minna mada neteru kana</p>
-					<p timestamp="88">Ranrara urara odokete sukippu suru</p>
-					<p timestamp="93.5">Ranrara urara nanda kana nodo kawai chatta na</p>
-					<p timestamp="98.5">Arara urara o saifu wasurete kichi yattana</p>
-					<p timestamp="104.5">(Koko no kimi choto kozeni o kashitekurenai ka-)</p>
-					<p timestamp="109">♫ ♫ ♫</p>
-					<pre>Lyrics provided by <a href="http://www.animelyrics.com/">animelyrics↗</a></pre>
+			<div class="hero">
+				<div>
+					<h1>Osanpo Kyousoukyoku</h1>
+					<h3><small>Fumiko Orikasa</small></h3>
+				</div>
+				<div>
+					<img src="cover.jpg" alt="Cover Art" />
 				</div>
 			</div>
-			<div class="wrap">
-				<audio id="audio" class="wrap" src="audio.mp3" controls>Your browser does not support the audio element.</audio>
+			<div class="lyrics-container" style="background-color: #9b15d5">
+				<div class="button-container">
+					<button title="Enter/exit full screen mode" type="button" id="toggleFullscreenButton">&#x1F5D6;</button>
+					<button title="Auto scroll the lyrics when played" type="button" class="scroll-button" id="toggleAutoScroll">🔓 Auto Scroll OFF</button>
+				</div>
+				<div id="overflow">
+					<div class="lyrics" id="lyrics">
+						<p timestamp="0.1">Mina ohayo su, kyara-CD notori wo kazaru no wa mina no aidoru ittsumo kawaii matsuoka miu-chan da</p>
+						<p timestamp="9.5">Matteta no kai mattetan da ne iiko da, yappa otori tte koto wa ichiban ninkitte koto</p>
+						<p timestamp="17">Mieru na, e nani mou honban</p>
+						<p timestamp="20">- - -</p>
+						<p timestamp="20">Matsuoka Miu Character Song</p>
+						<p timestamp="20.5">Ichigo Mashimaro Chara-CD</p>
+						<p timestamp="21">Based on Barasui Manga Series</p>
+						<p timestamp="22.8">Provided by Geneon Inc</p>
+						<p timestamp="24">Osanpo Kyousoukyoku</p>
+						<p timestamp="25.5">Sung by Fumiko Orikasa</p>
+						<p timestamp="25.5">- One, two -</p>
+						<p timestamp="27">Direkuta okya no baiorin mousukoshi agete, a tte nai okashii</p>
+						<p timestamp="33">Maa ikka yoshi [OK] sorede wa ko koroshiki tamae</p>
+						<p timestamp="37.5">♫ [YEAH] ♫</p>
+						<p timestamp="38.5">Hachi ji kishou de ohisama pikari kyou wa doko doko doko gou ka</p>
+						<p timestamp="43.5">Natsu no wan pide otome kouka tsuinteru yure tsuinteru yokan</p>
+						<p timestamp="49.5">Teku teku teku teku kado magatteku</p>
+						<p timestamp="52">Michi no mannaka ni dekkai mizu tamari utsusu</p>
+						<p timestamp="55">Naisu, nante kawaii no</p>
+						<p timestamp="57">Shibashi utsusu mitorete sugo su</p>
+						<p timestamp="60.5">- - -</p>
+						<p timestamp="60.5">Teku teku teku teku teku (teku teku teku)</p>
+						<p timestamp="66">Fuu fura fura fura fura (fura fura fura)</p>
+						<p timestamp="70.5">- - -</p>
+						<p timestamp="70.5">Choi haya aruki ohisama nikori</p>
+						<p timestamp="73.5">Kinjo no obasan attara pekori</p>
+						<p timestamp="76">Konna yoiko de pafekuto na watashi nanda kara</p>
+						<p timestamp="78.5">Negai wa soudawa sekai heiwa</p>
+						<p timestamp="81.5">(Watashi to deto tte-)</p>
+						<p timestamp="82.5">Ranrara urara ohayou minna mada neteru kana</p>
+						<p timestamp="88">Ranrara urara odokete sukippu suru</p>
+						<p timestamp="93.5">Ranrara urara nanda kana nodo kawai chatta na</p>
+						<p timestamp="98.5">Arara urara o saifu wasurete kichi yattana</p>
+						<p timestamp="104.5">(Koko no kimi choto kozeni o kashitekurenai ka-)</p>
+						<p timestamp="109">♫ ♫ ♫</p>
+						<pre>Lyrics provided by <a href="http://www.animelyrics.com/" target="_blank" class="nav-link">animelyrics↗</a></pre>
+					</div>
+				</div>
+				<div class="wrap">
+					<audio id="audio" class="wrap" src="audio.mp3" controls>Your browser does not support the audio element.</audio>
+				</div>
 			</div>
 			<div class="media">
 				<div class="row">
@@ -116,6 +126,6 @@
 				<small>DISCLAIMER : "Mashimaro TV" did not provide the full song. If you interested please support the original creator!</small>
 			</div>
 		</div>
-		<script src="../../js/main-min.js"></script>
+		<script src="../../js/main.js"></script>
 	</body>
 </html>
