fix documentation link

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 		<link rel="manifest" href="/site.webmanifest" />
-		<link rel="stylesheet" href="../../css/styles-min.css" />
+		<link rel="stylesheet" href="../../css/styles.css" />
 		<title>Mashimaro TV</title>
 	</head>
 	<body>
@@ -15,16 +15,16 @@
 			<nav>
 				<ul>
 					<li>
-						<h3><a href="/">Mashimaro TV</a></h3>
+						<h3><a href="/" class="nav-link">Mashimaro TV</a></h3>
 					</li>
-					<li><a href="https://github.com/narayanagung/mashimaro-tv" target="_blank">github↗</a></li>
+					<li><a href="https://github.com/narayanagung/mashimaro-tv" target="_blank" class="nav-link">Github↗</a></li>
 				</ul>
 			</nav>
 			<div class="home-container">
 				<h1>Spotify-ish Song Lyrics</h1>
 				<small>
-					From <a href="https://myanimelist.net/anime/488/Ichigo_Mashimaro" target="_blank">Ichigo Mashimaro↗</a> Anime Series by
-					<a href="https://myanimelist.net/people/2355/Barasui" target="_blank">Barasui↗</a>
+					From <a href="https://myanimelist.net/anime/488/Ichigo_Mashimaro" target="_blank" class="nav-link">Ichigo Mashimaro↗</a> Anime Series by
+					<a href="https://myanimelist.net/people/2355/Barasui" target="_blank" class="nav-link">Barasui↗</a>
 				</small>
 				<h4>🍓🍓🍓</h4>
 			</div>
