--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div class="home-container">
 				<h1>Spotify-ish Song Lyrics</h1>
 				<small>
-					From <a href="https://myanimelist.net/anime/488/Ichigo_Mashimaro" target="_blank" class="nav-link">Ichigo Mashimaro↗</a> Anime Series by
+					From <a href="https://myanimelist.net/anime/488/Ichigo_Mashimaro" target="_blank" class="nav-link">Ichigo Mashimaro↗</a> an anime series by
 					<a href="https://myanimelist.net/people/2355/Barasui" target="_blank" class="nav-link">Barasui↗</a>
 				</small>
 				<h4>🍓🍓🍓</h4>
