--- a/chara/ana/index.html
+++ b/chara/ana/index.html
@@ -27,7 +27,7 @@
 			</div>
 			<div class="lyrics-container" style="background-color: #009146">
 				<div class="button-container">
-					<button title="Enter/exit full screen mode" type="button" id="toggleFullscreenButton">&#x1F5D6;</button>
+					<button title="Enter/exit full screen mode" type="button" id="toggleFullscreenButton"><sup>↖</sup><sub>↘</sub></button>
 					<button title="Auto scroll the lyrics when played" type="button" class="scroll-button" id="toggleAutoScroll">🔓 Auto Scroll OFF</button>
 				</div>
 				<div id="overflow">
@@ -53,7 +53,7 @@
 					</div>
 				</div>
 				<div class="wrap">
-					<audio id="audio" class="wrap" src="audio.mp3" controls>Your browser does not support the audio element.</audio>
+					<audio id="audio" class="wrap" src="audio.mp3" preload="auto" controls>Your browser does not support the audio element.</audio>
 				</div>
 			</div>
 			<div class="media">
