--- a/chara/miu/index.html
+++ b/chara/miu/index.html
@@ -18,20 +18,25 @@
 			</nav>
 			<div class="hero">
 				<div>
-					<h1>Osanpo Kyousoukyoku</h1>
-					<h3><small>Fumiko Orikasa</small></h3>
+					<h1>Osanpo Kyousou-kyoku</h1>
+					<h3>
+						<a href="https://myanimelist.net/people/152/Fumiko_Orikasa" class="nav-link" target="_blank"><small>Fumiko Orikasa↗</small></a>
+					</h3>
 				</div>
-				<div>
-					<img src="cover.jpg" alt="Cover Art" />
-				</div>
+				<div class="hero-template miu"></div>
 			</div>
-			<div class="lyrics-container" style="background-color: #9b15d5">
+			<canvas id="visualizer"></canvas>
+			<div class="lyrics-container miu">
 				<div class="button-container">
+					<div class="button-left">
+						<button title="Auto scroll the lyrics when played" type="button" class="scroll-button" id="toggleAutoScroll">🔓 Auto Scroll</button>
+						<button title="Repeat the song when over (repeat by default)" type="button" class="scroll-button" id="toggleRepeat">🔁 Repeat</button>
+					</div>
 					<button title="Enter/exit full screen mode" type="button" id="toggleFullscreenButton"><sup>↖</sup><sub>↘</sub></button>
-					<button title="Auto scroll the lyrics when played" type="button" class="scroll-button" id="toggleAutoScroll">🔓 Auto Scroll OFF</button>
 				</div>
 				<div id="overflow">
 					<div class="lyrics" id="lyrics">
+						<p timestamp="0.1"></p>
 						<p timestamp="0.1">Mina ohayo su, kyara-CD notori wo kazaru no wa mina no aidoru ittsumo kawaii matsuoka miu-chan da</p>
 						<p timestamp="9.5">Matteta no kai mattetan da ne iiko da, yappa otori tte koto wa ichiban ninkitte koto</p>
 						<p timestamp="17">Mieru na, e nani mou honban</p>
@@ -71,59 +76,43 @@
 					</div>
 				</div>
 				<div class="wrap">
-					<audio id="audio" class="wrap" src="audio.mp3" preload="auto" controls>Your browser does not support the audio element.</audio>
+					<audio id="audio" class="wrap" src="audio.mp3" preload="auto" controls loop>Your browser does not support the audio element.</audio>
 				</div>
 			</div>
 			<div class="media">
 				<div class="row">
-					<div class="card" style="border: white 2px solid">
-						<a href="./index.html">
-							<img src="cover.jpg" alt="Cover Art" />
-						</a>
-						<a href="./index.html">
-							<ul>
-								<li>Osanpo Kyousoukyoku</li>
-								<li><small>Fumiko Orikasa</small></li>
-							</ul>
-						</a>
-					</div>
-					<div class="card">
-						<a href="../chika/index.html">
-							<img src="../chika/cover.jpg" alt="Cover Art" />
-						</a>
-						<a href="../chika/index.html">
-							<ul>
-								<li>Sore Wa Suteki Na Showtime</li>
-								<li><small>Saeko Chiba</small></li>
-							</ul>
-						</a>
-					</div>
-					<div class="card">
-						<a href="../matsuri/index.html">
-							<img src="../matsuri/cover.jpg" alt="Cover Art" />
-						</a>
-						<a href="../matsuri/index.html">
-							<ul>
-								<li>Miruku O Koboshite</li>
-								<li><small>Kawasumi Ayako</small></li>
-							</ul>
-						</a>
-					</div>
-					<div class="card">
-						<a href="../ana/index.html">
-							<img src="../ana/cover.jpg" alt="Cover Art" />
-						</a>
-						<a href="../ana/index.html">
-							<ul>
-								<li>Made In Onnanoko</li>
-								<li><small>Mamiko Noto</small></li>
-							</ul>
-						</a>
-					</div>
+					<a href="./index.html" class="card active">
+						<img src="cover.jpg" alt="Cover Art" />
+						<ul>
+							<li>Osanpo Kyousoukyoku</li>
+							<li><small>Fumiko Orikasa</small></li>
+						</ul>
+					</a>
+					<a href="../chika/index.html" class="card">
+						<img src="../chika/cover.jpg" alt="Cover Art" />
+						<ul>
+							<li>Sore Wa Suteki Na Showtime</li>
+							<li><small>Saeko Chiba</small></li>
+						</ul>
+					</a>
+					<a href="../matsuri/index.html" class="card">
+						<img src="../matsuri/cover.jpg" alt="Cover Art" />
+						<ul>
+							<li>Miruku O Koboshite</li>
+							<li><small>Ayako Kawasumi</small></li>
+						</ul>
+					</a>
+					<a href="../ana/index.html" class="card">
+						<img src="../ana/cover.jpg" alt="Cover Art" />
+						<ul>
+							<li>Made In Onnanoko</li>
+							<li><small>Mamiko Noto</small></li>
+						</ul>
+					</a>
 				</div>
 			</div>
 			<div class="footer">
-				<small>DISCLAIMER : "Mashimaro TV" did not provide the full song. If you interested please support the original creator!</small>
+				<small>Made with 💟 by narayanagung</small>
 			</div>
 		</div>
 		<script src="../../js/main.js"></script>
