--- a/index.html
+++ b/index.html
@@ -23,57 +23,43 @@
 			<div class="home-container">
 				<h1>Spotify-ish Song Lyrics</h1>
 				<small>
-					From <a href="https://myanimelist.net/anime/488/Ichigo_Mashimaro" target="_blank" class="nav-link">Ichigo Mashimaro↗</a> an anime series by
+					From <a href="https://myanimelist.net/anime/488/Ichigo_Mashimaro" target="_blank" class="nav-link">Ichigo Mashimaro↗</a> an anime and manga
+					series by
 					<a href="https://myanimelist.net/people/2355/Barasui" target="_blank" class="nav-link">Barasui↗</a>
 				</small>
 				<h4>🍓🍓🍓</h4>
 			</div>
-			<div class="card">
-				<a href="/chara/chika/index.html">
-					<img src="/chara/chika/cover.jpg" alt="Cover Art" />
-				</a>
-				<a href="/chara/chika/index.html">
-					<ul>
-						<li>Sore Wa Suteki Na Showtime</li>
-						<li><small>Saeko Chiba</small></li>
-					</ul>
-				</a>
-			</div>
-			<div class="card">
-				<a href="/chara/matsuri/index.html">
-					<img src="/chara/matsuri/cover.jpg" alt="Cover Art" />
-				</a>
-				<a href="/chara/matsuri/index.html">
-					<ul>
-						<li>Miruku O Koboshite</li>
-						<li><small>Kawasumi Ayako</small></li>
-					</ul>
-				</a>
-			</div>
-			<div class="card">
-				<a href="/chara/ana/index.html">
-					<img src="/chara/ana/cover.jpg" alt="Cover Art" />
-				</a>
-				<a href="chara/ana/index.html">
-					<ul>
-						<li>Made In Onnanoko</li>
-						<li><small>Mamiko Noto</small></li>
-					</ul>
-				</a>
-			</div>
-			<div class="card">
-				<a href="/chara/miu/index.html">
-					<img src="/chara/miu/cover.jpg" alt="Cover Art" />
-				</a>
-				<a href="/chara/miu/index.html">
-					<ul>
-						<li>Osanpo Kyousoukyoku</li>
-						<li><small>Fumiko Orikasa</small></li>
-					</ul>
-				</a>
-			</div>
+			<a href="/chara/chika/index.html" class="card">
+				<img src="/chara/chika/cover.jpg" alt="Cover Art" />
+				<ul>
+					<li>Sore Wa Suteki Na Showtime</li>
+					<li><small>Saeko Chiba</small></li>
+				</ul>
+			</a>
+			<a href="/chara/matsuri/index.html" class="card">
+				<img src="/chara/matsuri/cover.jpg" alt="Cover Art" />
+				<ul>
+					<li>Miruku O Koboshite</li>
+					<li><small>Ayako Kawasumi</small></li>
+				</ul>
+			</a>
+			<a href="/chara/ana/index.html" class="card">
+				<img src="/chara/ana/cover.jpg" alt="Cover Art" />
+				<ul>
+					<li>Made In Onnanoko</li>
+					<li><small>Mamiko Noto</small></li>
+				</ul>
+			</a>
+			<a href="/chara/miu/index.html" class="card">
+				<img src="/chara/miu/cover.jpg" alt="Cover Art" />
+				<ul>
+					<li>Osanpo Kyousoukyoku</li>
+					<li><small>Fumiko Orikasa</small></li>
+				</ul>
+			</a>
 			<div class="footer">
-				<small>DISCLAIMER : "Mashimaro TV" did not provide the full song. If you interested please support the original creator!</small>
+				<small>Made with 💟 by narayanagung</small>
+				<small>Disclaimer : "Mashimaro TV" did not provide the full song. If you interested please support the original creator!</small>
 			</div>
 		</div>
 	</body>
