--- a/chara/chika/index.html
+++ b/chara/chika/index.html
@@ -25,12 +25,11 @@
 				</div>
 				<div class="hero-template chika"></div>
 			</div>
-			<canvas id="visualizer"></canvas>
 			<div class="lyrics-container chika">
 				<div class="button-container">
 					<div class="button-left">
 						<button title="Auto scroll the lyrics when played" type="button" class="scroll-button" id="toggleAutoScroll">🔓 Auto Scroll</button>
-						<button title="Repeat the song when over (repeat by default)" type="button" class="scroll-button" id="toggleRepeat">🔁 Repeat</button>
+						<button title="Repeat the song when over (repeat by default)" type="button" id="toggleRepeat">🔁 Repeat</button>
 					</div>
 					<button title="Enter/exit full screen mode" type="button" id="toggleFullscreenButton"><sup>↖</sup><sub>↘</sub></button>
 				</div>
