--- a/chara/miu/index.html
+++ b/chara/miu/index.html
@@ -81,28 +81,28 @@
 			<div class="media">
 				<div class="row">
 					<a href="./index.html" class="card active">
-						<img src="cover.jpg" alt="Cover Art" />
+						<img src="cover.webp" alt="Cover Art" />
 						<ul>
 							<li>Osanpo Kyousoukyoku</li>
 							<li><small>Fumiko Orikasa</small></li>
 						</ul>
 					</a>
 					<a href="../chika/index.html" class="card">
-						<img src="../chika/cover.jpg" alt="Cover Art" />
+						<img src="../chika/cover.webp" alt="Cover Art" />
 						<ul>
 							<li>Sore Wa Suteki Na Showtime</li>
 							<li><small>Saeko Chiba</small></li>
 						</ul>
 					</a>
 					<a href="../matsuri/index.html" class="card">
-						<img src="../matsuri/cover.jpg" alt="Cover Art" />
+						<img src="../matsuri/cover.webp" alt="Cover Art" />
 						<ul>
 							<li>Miruku O Koboshite</li>
 							<li><small>Ayako Kawasumi</small></li>
 						</ul>
 					</a>
 					<a href="../ana/index.html" class="card">
-						<img src="../ana/cover.jpg" alt="Cover Art" />
+						<img src="../ana/cover.webp" alt="Cover Art" />
 						<ul>
 							<li>Made In Onnanoko</li>
 							<li><small>Mamiko Noto</small></li>
@@ -111,7 +111,7 @@
 				</div>
 			</div>
 			<div class="footer">
-				<small>Made with 💟 by narayanagung</small>
+				<small>Disclaimer : "Mashimaro TV" did not provide the full song. If you interested please support the original creator!</small>
 			</div>
 		</div>
 		<script src="../../js/main.js"></script>
