--- a/index.html
+++ b/index.html
@@ -30,28 +30,28 @@
 				<h4>🍓🍓🍓</h4>
 			</div>
 			<a href="/chara/chika/index.html" class="card">
-				<img src="/chara/chika/cover.jpg" alt="Cover Art" />
+				<img src="/chara/chika/cover.webp" alt="Cover Art" />
 				<ul>
 					<li>Sore Wa Suteki Na Showtime</li>
 					<li><small>Saeko Chiba</small></li>
 				</ul>
 			</a>
 			<a href="/chara/matsuri/index.html" class="card">
-				<img src="/chara/matsuri/cover.jpg" alt="Cover Art" />
+				<img src="/chara/matsuri/cover.webp" alt="Cover Art" />
 				<ul>
 					<li>Miruku O Koboshite</li>
 					<li><small>Ayako Kawasumi</small></li>
 				</ul>
 			</a>
 			<a href="/chara/ana/index.html" class="card">
-				<img src="/chara/ana/cover.jpg" alt="Cover Art" />
+				<img src="/chara/ana/cover.webp" alt="Cover Art" />
 				<ul>
 					<li>Made In Onnanoko</li>
 					<li><small>Mamiko Noto</small></li>
 				</ul>
 			</a>
 			<a href="/chara/miu/index.html" class="card">
-				<img src="/chara/miu/cover.jpg" alt="Cover Art" />
+				<img src="/chara/miu/cover.webp" alt="Cover Art" />
 				<ul>
 					<li>Osanpo Kyousoukyoku</li>
 					<li><small>Fumiko Orikasa</small></li>
