--- a/index.html
+++ b/index.html
@@ -11,56 +11,58 @@
 		<title>Mashimaro TV</title>
 	</head>
 	<body>
-		<div class="home-grid">
+		<div class="home-grid hidden">
 			<nav>
 				<ul>
 					<li>
 						<h3><a href="/" class="nav-link">Mashimaro TV</a></h3>
 					</li>
-					<li><a href="https://github.com/narayanagung/mashimaro-tv" target="_blank" class="nav-link">Github↗</a></li>
+					<li><a href="https://github.com/narayanagung" target="_blank" class="nav-link">Github↗</a></li>
 				</ul>
 			</nav>
 			<div class="home-container">
 				<h1>Spotify-ish Song Lyrics</h1>
 				<small>
 					From <a href="https://myanimelist.net/anime/488/Ichigo_Mashimaro" target="_blank" class="nav-link">Ichigo Mashimaro↗</a> an anime and manga
-					series by
-					<a href="https://myanimelist.net/people/2355/Barasui" target="_blank" class="nav-link">Barasui↗</a>
+					series by <a href="https://myanimelist.net/people/2355/Barasui" target="_blank" class="nav-link">Barasui↗</a>
 				</small>
 				<h4>🍓🍓🍓</h4>
 			</div>
-			<a href="/chara/chika/index.html" class="card">
-				<img src="/chara/chika/cover.webp" alt="Cover Art" />
-				<ul>
-					<li>Sore Wa Suteki Na Showtime</li>
-					<li><small>Saeko Chiba</small></li>
-				</ul>
-			</a>
-			<a href="/chara/matsuri/index.html" class="card">
-				<img src="/chara/matsuri/cover.webp" alt="Cover Art" />
-				<ul>
-					<li>Miruku O Koboshite</li>
-					<li><small>Ayako Kawasumi</small></li>
-				</ul>
-			</a>
-			<a href="/chara/ana/index.html" class="card">
-				<img src="/chara/ana/cover.webp" alt="Cover Art" />
-				<ul>
-					<li>Made In Onnanoko</li>
-					<li><small>Mamiko Noto</small></li>
-				</ul>
-			</a>
-			<a href="/chara/miu/index.html" class="card">
-				<img src="/chara/miu/cover.webp" alt="Cover Art" />
-				<ul>
-					<li>Osanpo Kyousoukyoku</li>
-					<li><small>Fumiko Orikasa</small></li>
-				</ul>
-			</a>
+			<div class="home-card">
+				<a title="Sore Wa Suteki Na Showtime" href="/chara/chika/index.html" class="card-home hidden delay">
+					<img src="/chara/chika/cover.webp" alt="Cover Art" />
+					<ul>
+						<li>Sore Wa Suteki Na Showtime</li>
+						<li><small>Saeko Chiba</small></li>
+					</ul>
+				</a>
+				<a title="Miruku O Koboshite" href="/chara/matsuri/index.html" class="card-home hidden delay">
+					<img src="/chara/matsuri/cover.webp" alt="Cover Art" />
+					<ul>
+						<li>Miruku O Koboshite</li>
+						<li><small>Ayako Kawasumi</small></li>
+					</ul>
+				</a>
+				<a title="Made In Onnanoko" href="/chara/ana/index.html" class="card-home hidden delay">
+					<img src="/chara/ana/cover.webp" alt="Cover Art" />
+					<ul>
+						<li>Made In Onnanoko</li>
+						<li><small>Mamiko Noto</small></li>
+					</ul>
+				</a>
+				<a title="Osanpo Kyousoukyoku" href="/chara/miu/index.html" class="card-home hidden delay">
+					<img src="/chara/miu/cover.webp" alt="Cover Art" />
+					<ul>
+						<li>Osanpo Kyousoukyoku</li>
+						<li><small>Fumiko Orikasa</small></li>
+					</ul>
+				</a>
+			</div>
 			<div class="footer">
 				<small>Made with 💟 by narayanagung</small>
 				<small>Disclaimer : "Mashimaro TV" did not provide the full song. If you interested please support the original creator!</small>
 			</div>
 		</div>
+		<script src="/js/anim.js"></script>
 	</body>
 </html>
