--- a/src/chara/ana/index.html
+++ b/src/chara/ana/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="../../css/styles.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 		<title>Made In Onnanoko - Ana Coppola Character Song</title>
 	</head>
 	<body>
@@ -11,25 +12,32 @@
 			<nav>
 				<ul>
 					<li>
-						<h3><a href="/" class="nav-link">Mashimaro TV</a></h3>
+						<h3><a href="/" title="Homepage" class="nav-link">Mashimaro TV</a></h3>
 					</li>
-					<li><a href="https://github.com/narayanagung" target="_blank" class="nav-link">Github↗</a></li>
+					<li>
+						<a href="../../old/index.html" title="Visit Prototype Version" target="_blank" class="nav-link"
+							><i class="fa fa-code-fork" style="font-size: 28px"></i
+						></a>
+						<a href="https://github.com/narayanagung/mashimaro-tv" title="Github Repository" target="_blank" class="nav-link"
+							><i class="fa fa-github" style="font-size: 28px"></i
+						></a>
+					</li>
 				</ul>
 			</nav>
 			<div class="hero">
 				<div>
 					<h1>Made In Onnanoko</h1>
 					<h3>
-						<a href="https://myanimelist.net/people/40/Mamiko_Noto" class="nav-link" target="_blank"><small>Mamiko Noto↗</small></a>
+						<a href="https://myanimelist.net/people/40/Mamiko_Noto" class="nav-link" target="_blank"><small>Mamiko Noto</small></a>
 					</h3>
 				</div>
-				<div class="hero-template ana"></div>
+				<div class="hero-template ana" title="Ana Coppola"></div>
 			</div>
 			<div class="lyrics-container ana">
 				<div class="button-container">
 					<div class="button-left">
-						<button title="Repeat the song when over (repeat by default)" type="button" id="toggleRepeat">🔁 Repeat</button>
-						<button title="Auto scroll the lyrics when played" type="button" class="scroll-button" id="toggleAutoScroll">🔓 Scroll</button>
+						<button title="Repeat the song when over (repeat by default)" type="button" id="toggleRepeat">Repeat</button>
+						<button title="Auto scroll the lyrics when played" type="button" class="scroll-button" id="toggleAutoScroll">Scroll</button>
 					</div>
 					<button title="Enter/exit full screen mode" type="button" id="toggleFullscreenButton"><sup>↖</sup><sub>↘</sub></button>
 				</div>
