--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 		<link rel="manifest" href="/site.webmanifest" />
 		<link rel="stylesheet" href="./css/styles.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 		<title>Mashimaro TV</title>
 	</head>
 	<body>
@@ -15,16 +16,23 @@
 			<nav>
 				<ul>
 					<li>
-						<h3><a href="/" class="nav-link">Mashimaro TV</a></h3>
+						<h3><a href="/" title="Homepage" class="nav-link">Mashimaro TV</a></h3>
 					</li>
-					<li><a href="https://github.com/narayanagung" target="_blank" class="nav-link">Github↗</a></li>
+					<li>
+						<a href="/src/old/index.html" title="Visit Prototype Version" target="_blank" class="nav-link"
+							><i class="fa fa-code-fork" style="font-size: 28px"></i
+						></a>
+						<a href="https://github.com/narayanagung/mashimaro-tv" title="Github Repository" target="_blank" class="nav-link"
+							><i class="fa fa-github" style="font-size: 28px"></i
+						></a>
+					</li>
 				</ul>
 			</nav>
 			<div class="home-container">
 				<h1>Spotify-ish Song Lyrics</h1>
-				<small>
-					From <a href="https://myanimelist.net/anime/488/Ichigo_Mashimaro" target="_blank" class="nav-link">Ichigo Mashimaro↗</a> an anime and manga
-					series by <a href="https://myanimelist.net/people/2355/Barasui" target="_blank" class="nav-link">Barasui↗</a>
+				<small style="font-size: 1rem">
+					From <a href="https://myanimelist.net/anime/488/Ichigo_Mashimaro" target="_blank" class="nav-link">Ichigo Mashimaro</a> an anime and manga
+					series by <a href="https://myanimelist.net/people/2355/Barasui" target="_blank" class="nav-link">Barasui</a>
 				</small>
 				<h4>🍓🍓🍓</h4>
 			</div>
