--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 						<h3><a href="/" title="Homepage" class="nav-link">Mashimaro TV</a></h3>
 					</li>
 					<li>
-						<a href="/src/old/index.html" title="Visit Prototype Version" target="_blank" class="nav-link"
+						<a href="/old/index.html" title="Visit Prototype Version" target="_blank" class="nav-link"
 							><i class="fa fa-code-fork" style="font-size: 28px"></i
 						></a>
 						<a href="https://github.com/narayanagung/mashimaro-tv" title="Github Repository" target="_blank" class="nav-link"
