icon & smoother color

--- a/src/chara/ana/index.html
+++ b/src/chara/ana/index.html
@@ -25,12 +25,12 @@
 				</ul>
 			</nav>
 			<div class="hero">
-				<div>
+				<hgroup>
 					<h1>Made In Onnanoko</h1>
 					<h3>
 						<a href="https://myanimelist.net/people/40/Mamiko_Noto" class="nav-link" target="_blank"><small>Mamiko Noto</small></a>
 					</h3>
-				</div>
+				</hgroup>
 				<div class="hero-template ana" title="Ana Coppola"></div>
 			</div>
 			<div class="lyrics-container ana">
@@ -74,7 +74,9 @@
 						<img src="cover.webp" alt="Cover Art" />
 						<ul>
 							<li>Made In Onnanoko</li>
-							<li><small>▶️ Now Playing</small></li>
+							<li>
+								<small><i class="fa fa-play" style="font-size: 14px"></i>&nbsp;&nbsp;Now Playing</small>
+							</li>
 						</ul>
 					</span>
 					<a href="../miu/index.html" class="card">
