--- a/src/chara/chika/index.html
+++ b/src/chara/chika/index.html
@@ -25,12 +25,12 @@
 				</ul>
 			</nav>
 			<div class="hero">
-				<div>
+				<hgroup>
 					<h1>Sore Wa Suteki Na Showtime</h1>
 					<h3>
 						<a href="https://myanimelist.net/people/135/Saeko_Chiba" class="nav-link" target="_blank"><small>Saeko Chiba</small></a>
 					</h3>
-				</div>
+				</hgroup>
 				<div class="hero-template chika" title="Itou Chika"></div>
 			</div>
 			<div class="lyrics-container chika">
@@ -78,7 +78,9 @@
 						<img src="./cover.webp" alt="Cover Art" />
 						<ul>
 							<li>Sore Wa Suteki Na Showtime</li>
-							<li><small>▶️ Now Playing</small></li>
+							<li>
+								<small><i class="fa fa-play" style="font-size: 14px"></i>&nbsp;&nbsp;Now Playing</small>
+							</li>
 						</ul>
 					</span>
 					<a href="../matsuri/index.html" class="card">
