--- a/src/chara/matsuri/index.html
+++ b/src/chara/matsuri/index.html
@@ -25,12 +25,12 @@
 				</ul>
 			</nav>
 			<div class="hero">
-				<div>
+				<hgroup>
 					<h1>Miruku O Koboshite</h1>
 					<h3>
 						<a href="https://myanimelist.net/people/13/Ayako_Kawasumi" class="nav-link" target="_blank"><small>Ayako Kawasumi</small></a>
 					</h3>
-				</div>
+				</hgroup>
 				<div class="hero-template matsuri" title="Sakuragi Matsuri"></div>
 			</div>
 			<div class="lyrics-container matsuri">
@@ -76,7 +76,9 @@
 						<img src="cover.webp" alt="Cover Art" />
 						<ul>
 							<li>Miruku O Koboshite</li>
-							<li><small>▶️ Now Playing</small></li>
+							<li>
+								<small><i class="fa fa-play" style="font-size: 14px"></i>&nbsp;&nbsp;Now Playing</small>
+							</li>
 						</ul>
 					</span>
 					<a href="../ana/index.html" class="card">
