--- a/src/chara/miu/index.html
+++ b/src/chara/miu/index.html
@@ -25,12 +25,12 @@
 				</ul>
 			</nav>
 			<div class="hero">
-				<div>
+				<hgroup>
 					<h1>Osanpo Kyou-soukyoku</h1>
 					<h3>
 						<a href="https://myanimelist.net/people/152/Fumiko_Orikasa" class="nav-link" target="_blank"><small>Fumiko Orikasa</small></a>
 					</h3>
-				</div>
+				</hgroup>
 				<div class="hero-template miu" title="Matsuoka Miu"></div>
 			</div>
 			<div class="lyrics-container miu">
@@ -93,7 +93,9 @@
 						<img src="cover.webp" alt="Cover Art" />
 						<ul>
 							<li>Osanpo Kyousoukyoku</li>
-							<li><small>▶️ Now Playing</small></li>
+							<li>
+								<small><i class="fa fa-play" style="font-size: 14px"></i>&nbsp;&nbsp;Now Playing</small>
+							</li>
 						</ul>
 					</span>
 					<a href="../chika/index.html" class="card">
