--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
 				</a>
 			</div>
 			<div class="footer">
-				<small>Made with 💟 by narayanagung</small><br />
+				<small class="credit">Made with 💟 by narayanagung</small><br />
 				<small>Disclaimer : "Mashimaro TV" did not provide the full song. If you interested please support the original creator!</small>
 			</div>
 		</div>
