--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,9 @@
 						<a href="/old/index.html" title="Visit Prototype Version" target="_blank" class="nav-link"
 							><i class="fa fa-code-fork" style="font-size: 28px"></i
 						></a>
-						<a href="https://github.com/narayanagung/mashimaro-tv" title="Github Repository" target="_blank" class="nav-link"
+						<!-- <a href="https://github.com/narayanagung/mashimaro-tv" title="Github Repository" target="_blank" class="nav-link"
 							><i class="fa fa-github" style="font-size: 28px"></i
-						></a>
+						></a> -->
 					</li>
 				</ul>
 			</nav>
